added mobile version

--- a/index.html
+++ b/index.html
@@ -93,6 +93,51 @@
             margin-top: 40px;
             font-size: 0.9rem;
         }
+
+        @media (max-width: 768px) {
+            header {
+                padding: 100px 20px; /* Reduce padding for smaller screens */
+                text-align: center;
+            }
+
+            header h1 {
+                font-size: 2rem; /* Reduce font size for header title */
+            }
+
+            header p {
+                font-size: 1rem; /* Reduce font size for header subtitle */
+            }
+
+            nav {
+                padding: 10px 15px; /* Adjust padding for the navigation bar */
+            }
+
+            nav a {
+                margin: 0 10px; /* Reduce spacing between navigation links */
+                font-size: 0.9rem; /* Reduce font size for navigation links */
+            }
+
+            section {
+                padding: 15px; /* Reduce padding for sections */
+            }
+
+            .about p {
+                margin-right: 0; /* Remove right margin for better text alignment */
+            }
+
+            .services img {
+                width: 100%; /* Make the image full width */
+            }
+
+            .services ul {
+                padding-left: 20px; /* Add padding for better readability */
+            }
+
+            .map iframe {
+                width: 100%; /* Make the map iframe responsive */
+                height: 300px; /* Adjust height for smaller screens */
+            }
+        }
     </style>
 </head>
 <body>
