--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             background-color: #f8f9fa;
         }
         header {
-            background: url('./images/cover.png') no-repeat center center; /* Updated path */
+            background: url('./images/cover.jpg') no-repeat center center; /* Updated path */
             background-size: cover;
             color: white;
             text-align: center;
@@ -182,10 +182,10 @@
         <p>Por ese motivo, hemos puesto nuestra meta en mejorar constantemente, no solo la calidad de nuestros servicios, sino también la variedad y el alcance de los mismos.</p>
         <p>A comienzos del 2010, se adquiere la división repuestos de la firma Vialven S.A. lo que, nuevamente, nos hace posible responder con mayor eficacia las necesidades de nuestros clientes al poseer un mayor stock de repuestos originales, además de convertirnos en importadores directos de los mismos.</p>
         <div style="display: flex; gap: 2px; margin-top: 40px;"> <!-- Increased margin-top for more padding -->
-            <img src="./images/tira_0.png" alt="Image 1" style="width: 25%; height: auto; object-fit: cover;"> <!-- Updated path -->
-            <img src="./images/tira_1.png" alt="Image 2" style="width: 25%; height: auto; object-fit: cover;"> <!-- Updated path -->
+            <img src="./images/tira_0.jpg" alt="Image 1" style="width: 25%; height: auto; object-fit: cover;"> <!-- Updated path -->
+            <img src="./images/tira_1.jpg" alt="Image 2" style="width: 25%; height: auto; object-fit: cover;"> <!-- Updated path -->
             <img src="./images/tira_2.jpg" alt="Image 3" style="width: 25%; height: auto; object-fit: cover;"> <!-- Updated path -->
-            <img src="./images/tira_3.png" alt="Image 4" style="width: 25%; height: auto; object-fit: cover;"> <!-- Updated path -->
+            <img src="./images/tira_3.jpg" alt="Image 4" style="width: 25%; height: auto; object-fit: cover;"> <!-- Updated path -->
         </div>
     </section>
     <section id="services" class="services">
